# refuge-old

./: .pre-commit-config.yaml  BUILD  LICENSE.ADDITIONAL-TERMS  README.md  pyproject.toml  requirements.txt
example/: finetune.ipynb
example/checkpoints/dolly-v2-3b/alice/: 6021.csv
example/checkpoints/dolly-v2-3b/george/: .gitignore  7870.csv
example/checkpoints/pythia-160m-deduped/addition/: 1.csv
example/data/: alice-tokenized-dolly-v2-3b.json  unspoken-sermons-tokenized-dolly-v2-3b.json  unspoken-sermons.txt
notebooks/: 00-finetune-from-library.ipynb  alice.txt  investigate-model.ipynb  soft-tuned-inference.ipynb  transformer-lens.ipynb  tuning_finetune.ipynb
refuge/: __init__.py  _checkpoints.py  _embeddings.py  _gsam.py  _paths.py  _version.py  model.py  paths.py  training.py
refuge/_vendor/: inference.py  trainers.py  tuning.py
refuge/_vendor/dolly/: instruct_pipeline.py
refuge/_vendor/mkultra/: README.md  soft_prompt.py  tokenizers.py  trainers.py  tuning.py
refuge/config/: __init__.py  _load.py  default.toml
