[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "refuge"
authors = [
  { name = "Alex Carpenter", email = "alex@refuge.au" },
  { name = "Simon Biggs", email = "simon@refuge.au" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = ["version", "description"]
dependencies = []

[project.urls]
Home = "https://refuge.au"
