[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "refuge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"
transformers = "*"
accelerate = "*"
deepspeed = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
tomlkit = "*"
transformer-lens = "^1.2.2"
pytorch-optimizer = "^2.9.0"
pysvelte = { git = "https://github.com/neelnanda-io/PySvelte" }
plotly = "^5.14.1"
nbformat = "^5.8.0"
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.6"
kaleido = "0.2.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ipykernel = "*"
isort = "*"
pylint = "*"
pre-commit = "*"
ipywidgets = "*"

[tool.isort]
profile = "black"
color_output = true
known_first_party = ["refuge"]

[tool.pyright]
ignore = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"

[tool.pylint.messages-control]
disable = [
  "fixme",
  "line-too-long",
  "missing-function-docstring",
  "no-name-in-module",
  "missing-class-docstring",
  "too-few-public-methods",
  "invalid-name",
  "missing-module-docstring",
  "no-member",
  "logging-fstring-interpolation",
]

[tool.pylint.design]
max-locals = 25
max-args = 8
